task2/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: "/log"
    route:
    - destination:
        host: custom-app-service
        port:
          number: 80
    timeout: 1s
    retries:
      attempts: 2
      perTryTimeout: 1s
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: custom-app-service
        port:
          number: 80
  - route:
    - destination:
        host: custom-app-service
        port:
          number: 80
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 404
